@@ -46,4 +46,13 @@ public interface TokenHandler
 	 */
 	public void handleToken(Segment seg, byte id, int offset, int length,
 		TokenMarker.LineContext context);
+
+	/**
+	 * The token handler can compare this object with the object
+	 * previously given for this line to see if the token type at the end
+	 * of the line has changed (meaning subsequent lines might need to be
+	 * retokenized).
+	 * @since jEdit 4.2pre6
+	 */
+	public void setLineContext(TokenMarker.LineContext lineContext);
 }
